# live-cmaf-transcoder

./: .dockerignore  .gitignore  README.md  SECURITY.md  compose-no-gpu.yaml  compose.yaml  docker-bake.hcl  release.sh  run.sh
.github/: release-drafter.yml
.github/workflows/: create-release.yml  dockerhub.yml  packages.yml  release.yml
backend/: Cargo.toml
backend/frontend/: empty.html
backend/src/: api.rs  core.rs  frontend.rs  main.rs  servermonitoring.rs  utils.rs
backend/src/db/: dbredis.rs  mod.rs  subscriber.rs  subscribermanager.rs
backend/src/ff/: ffapi.rs  ffcommand.rs  ffcore.rs  ffdb.rs  ffevent.rs  fflogs.rs  ffmpegbin.rs  ffprocess.rs  ffprocesschildwrapper.rs  ffstatus.rs  mod.rs
backend/src/model/: corestate.rs  logs.rs  mod.rs  server.rs  serverstatus.rs  state.rs
backend/src/model/ff/: audioadaptationset.rs  ffconfig.rs  ffstatusvalue.rs  mod.rs  srt.rs  videoadaptationset.rs  videofilter.rs
docker/: backend.Dockerfile  demo.sh  ffmpeg-gpl.Dockerfile  ffmpeg-non-free.Dockerfile  ffmpeg.Dockerfile  frontend.Dockerfile  live-cmaf-transcoder-base-dev.Dockerfile  live-cmaf-transcoder-demo.Dockerfile  live-cmaf-transcoder-redis.Dockerfile  live-cmaf-transcoder.Dockerfile  redis.sh
docs/: index.md  issues.md
ffmpeg/: README.md
ffmpeg/7.0/: 0001-Fix-live-encoding-is-stopping-after-dts-discontinuit.patch  0001-New-option-to-apply-an-offset-to-Availabiliy-Start-T.patch  0003-Improve-ffmpeg-stat-for-live-by-calculating-fps-aver.patch
frontend/: eslint.config.mjs  nuxt.config.ts  openapitools.json  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/backend/: runtime.ts
frontend/backend/.openapi-generator/: FILES
frontend/backend/apis/: FFApi.ts  ServersApi.ts  index.ts
frontend/backend/models/: Acceleration.ts  AudioAdaptationSet.ts  AudioEncoder.ts  Audioprofile.ts  Colorspace.ts  CoreState.ts  FFConfig.ts  FFStatusValue.ts  Gpu.ts  InConfigID.ts  InFFCreate.ts  InFFUpdate.ts  InServerID.ts  InSetState.ts  Log.ts  LogLevel.ts  MPDType.ts  OutGetAllFFConfig.ts  OutGetAllServerStatus.ts  OutGetAllServers.ts  OutGetFFStatus.ts  (+17 more)
frontend/components/: DeletePopup.vue  LogsView.vue  OverviewServer.vue  RowApplyConfigBtn.vue  ServerStatusIcon.vue
frontend/composables/: alert.ts  api.ts  ffapi.ts  states.ts  utils.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
sandbox/: create.json  test.yml  update.json
(+20 files in other folders)
